# ANPhoneTool

./: .clang-format  .gitignore  ANPhoneEvent.h  CMakeLists.txt  KeepRatioWidget.cpp  KeepRatioWidget.h  MirrorWidget.cpp  MirrorWidget.h  MirrorWidget.ui  loginview.cpp  loginview.h  loginview.ui  main.cpp  resources.qrc  widget.cpp  widget.h  widget.ui
Core/: CMakeLists.txt  KeyboardHandler.cpp  KeyboardHandler.h  MDNSService.cpp  MDNSService.h  UUID.cpp  UUID.h  UserNotificationCenter.cpp  UserNotificationCenter.h
Network/: AndroidDaemon.cpp  AndroidDaemon.h  CMakeLists.txt  DesktopServer.cpp  DesktopServer.h  DeviceSocket.cpp  DeviceSocket.h  tcpserver.cpp  tcpserver.h
Render/: CMakeLists.txt  Decoder.cpp  Decoder.h  Frames.cpp  Frames.h  QD3D11Layer.cpp  QD3D11Layer.h  QD3D11VideoWidget.cpp  QD3D11VideoWidget.h
Render/Shaders/: YUVVideo.shader
Threads/: CMakeLists.txt
Tools/: CMakeLists.txt
Tools/BoujourTest/: CMakeLists.txt  discover.cpp  register.cpp
Utilities/: CMakeLists.txt  Log.cpp  Log.h
adb/: AdbHandler.cpp  AdbHandler.h  AdbProcess.cpp  AdbProcess.h  CMakeLists.txt  typedef.h
proto/: CMakeLists.txt  DesktopMessage.proto  DeviceMessage.proto
